--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1 class="h">Hi, I'm HARIHARASUDAN 👋🏻</h1>
     </div>
     <br><br>
-    <center><img src="wel.png" alt="This is Welcome Page" style="border: 5px solid yellow; border-radius: 10px;" height="300"></center>
+    <center><img src="wel.png" alt="This is Welcome Page" style="border: 5px solid yellow; border-radius: 10px;"></center>
     
 </body>
 </html>
