--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -11,6 +11,13 @@
             border: 5px solid;
             border-radius: 15px;
         }
+
+        img{
+            max-width: 768px;
+            height: auto;
+            display: block;
+            margin: auto;
+        }
     </style>
 </head>
 <body align="center" bgcolor="yellow">
