--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -13,7 +13,7 @@
         }
 
         img{
-            max-width: 768px;
+            max-width: 100%;
             height: auto;
             display: block;
             margin: auto;
