--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -11,17 +11,10 @@
             border: 5px solid;
             border-radius: 15px;
         }
-
-        img{
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: auto;
-        }
     </style>
 </head>
 <body align="center" bgcolor="yellow">
-    <img src="images/myimage.png" alt="My Photo" width="600" height="600">
+    <img src="images/myimage.png" alt="My Photo" >
     <br><br>
     <p style="text-align: center; padding: 10px; margin-left: 10px; background-color: red; font-size: 25px;color: white;">Hello! I'm Hariharasudhan from Thirubuvanam. I'm currently pursuing my Bachelor of Computer Applications (BCA) at Swami Dayananda College of Arts and Science. I completed my schooling at Little Flower Higher Secondary School.</p>
     <p style="text-align: center; padding: 10px; margin-left: 10px; background-color: red; font-size: 25px; color: white;">I'm passionate about web development and love creating beautiful, functional websites. I enjoy exploring new technologies, solving coding problems, and working on creative digital projects like my current one — the <strong>Digital Portfolio</strong>.</p>
