--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
-<body bgcolor="yellowgreen" text="white">
+<body bgcolor="yellow" text="red">
     <h2>Projects:</h2>
     <ul type="disk" style="line-height: 2;">
         <li>Digital-portfolio</li>
